# onionfruit-web

./: .gitignore  .travis.yml  Directory.Build.props  Dockerfile  DragonFruit.OnionFruit.Api.sln  DragonFruit.OnionFruit.Api.sln.DotSettings  DragonFruit.OnionFruit.Status.sln  DragonFruit.OnionFruit.Status.sln.DotSettings  DragonFruit.OnionFruit.Web.sln  DragonFruit.OnionFruit.Web.sln.DotSettings  LICENSE  LICENSE.md  NuGet.config  Nuget.ps1  appsettings.Development.json  codecutter.json  deployment.md  docker-compose.yml  license.md  oniondb.proto  readme.md
.config/: dotnet-tools.json
.github/: dependabot.yml
.run/: Docker (Database).run.xml  IISDeploy.run.xml  OnionFruit Country List Generator.run.xml  Server (Integrated Worker).run.xml  Server (Standalone).run.xml  Server.run.xml  Worker Process.run.xml  Worker.run.xml
DragonFruit.OnionFruit.Api.Tests/: DragonFruit.OnionFruit.Api.Tests.csproj  OnionFruitApiTest.cs  StatusTests.cs
DragonFruit.OnionFruit.Services.LocationDb/: AddressUtils.cs  BinaryUtils.cs  DatabaseLoader.cs  GlobalDatabaseHeader.cs  ViewEnumerator.cs
DragonFruit.OnionFruit.Services.LocationDb.Sync/: DragonFruit.OnionFruit.Services.LocationDb.Sync.csproj  IDatabaseAccessor.cs  LocationDatabaseAccessor.cs  LocationDbDownloadRequest.cs
DragonFruit.OnionFruit.Services.Onionoo.Tests/: StatusTests.cs  (+1 more)
generator/: Dockerfile  (+2 more)
native/geodb_network_processor/: Cargo.toml
native/geodb_network_processor/src/: interop_format.rs  lib.rs  netblock_ops.rs
native/src/: Cargo.toml
native/src/src/: interop_format.rs  lib.rs  netblock_ops.rs
(+248 files in other folders)
