[package]
name = "geodb_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "geodb_processor"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = { version = "0.20.0", default-features = false }
rangemap = "1.4.0"