[package]
name = "onionfruit_worker_native"
version = "0.2.0"
edition = "2021"

[lib]
name = "onionfruit_worker_native"
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = { version = "0.20.0", default-features = false }
rangemap = "1.4.0"