[package]
name = "onionfruit_worker_native"
version = "1.0.1"
edition = "2024"

[lib]
name = "onionfruit_worker_native"
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.21.1"
rangemap = "1.6.0"